# fin-simulation-module

./: README.md  pyproject.toml
src/: StockTransaction.py  app.py
src/data/: dataStore.py  factory.py  model.py  operation.py
src/util/: dateUtil.py  modelToDict.py
tests/: test_factory.py  test_get_stock.py  test_stock.py
